@@ -18,6 +18,7 @@
     * Allow getting SQL_DM_VER via SQLGetInfo before connecting to a driver
     * Generate unixodbc_conf.h using macros to allow cross compiling
     * Fix some libltdl problems 
+    * Fix some naiming problems with the cursor lib
 
 20th-April-2010
 2.3.0
